--- a/login-register-api/appsettings.json
+++ b/login-register-api/appsettings.json
@@ -10,5 +10,5 @@
   "ConnectionStrings": {
     "localhost": "Data Source=localhost;Initial Catalog=master;Integrated Security=True"
   },
-  "TokenKey": "this application made by Kornél Tóth"
+  "TokenKey": "this application was made by Kornél Tóth"
 }
